<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="720dp"
        android:layout_marginTop="-24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/bg_2_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg2_"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginTop="-48dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/bg_3_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg3_"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="410dp"
        android:layout_height="720dp"
        android:layout_marginTop="-48dp"
        android:layout_marginBottom="48dp"
        app:srcCompat="@drawable/bg1_"
        android:contentDescription="@string/bg_1_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="277dp"
        android:layout_height="80dp"
        style="@style/main_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_Bg" />

    <ImageView
        android:id="@+id/imageView_Bg"
        android:layout_width="136dp"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:contentDescription="@string/main_bg_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/monthTextView"
        android:layout_width="300dp"
        android:layout_height="28dp"
        style="@style/main_textView_month"
        app:layout_constraintBottom_toBottomOf="@id/imageView_Bg"
        app:layout_constraintEnd_toEndOf="@id/imageView_Bg"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="@id/imageView_Bg"
        app:layout_constraintTop_toTopOf="@id/imageView_Bg"
        app:layout_constraintVertical_bias="0.208" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="110dp"
        android:layout_height="22dp"
        style="@style/main_textView_dayTime"
        app:layout_constraintBottom_toTopOf="@id/imageView_Bg2"
        app:layout_constraintEnd_toEndOf="@id/imageView_Bg2"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@id/imageView_Bg2"
        app:layout_constraintTop_toTopOf="@id/imageView_Bg"
        app:layout_constraintVertical_bias="0.44" />

    <ImageView
        android:id="@+id/imageView_Bg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_bg2_desc"
        android:src="@drawable/icon_constructor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_Bg"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="@+id/imageView_Bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/main_imgBtn_desc2"
        android:src="@drawable/icon_home_active"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_Bg"
        app:layout_constraintStart_toStartOf="@+id/imageView_Bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_imgBtn_desc3"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/icon_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_Bg"
        app:layout_constraintStart_toStartOf="@+id/imageView_Bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_imgBtn_desc1"
        android:src="@drawable/icon_customization"
        android:backgroundTint="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_Bg"
        app:layout_constraintStart_toStartOf="@+id/imageView_Bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_textDay_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageView_Bg2"
        app:layout_constraintEnd_toEndOf="@id/imageView_Bg2"
        app:layout_constraintStart_toStartOf="@id/imageView_Bg2"
        app:layout_constraintTop_toTopOf="@id/imageView_Bg2"
        app:layout_constraintVertical_bias="0.925" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="110dp"
        android:layout_height="22dp"
        android:gravity="center"
        style="@style/main_textView_day"
        app:layout_constraintBottom_toBottomOf="@id/imageView_Bg2"
        app:layout_constraintEnd_toEndOf="@id/imageView_Bg2"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@id/imageView_Bg2"
        app:layout_constraintTop_toTopOf="@id/imageView_Bg2"
        app:layout_constraintVertical_bias="0.405" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/main_textView_time1"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintEnd_toEndOf="@id/imageView_Bg"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@id/imageView_Bg"
        app:layout_constraintTop_toBottomOf="@id/imageView_Bg2"
        app:layout_constraintVertical_bias="0.398" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/main_textView_time2"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintEnd_toEndOf="@id/imageView_Bg"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@id/imageView_Bg"
        app:layout_constraintTop_toBottomOf="@id/imageView_Bg2"
        app:layout_constraintVertical_bias="0.62" />
</androidx.constraintlayout.widget.ConstraintLayout>